--- a/public/admin_book_page.css
+++ b/public/admin_book_page.css
@@ -2,7 +2,7 @@
 @font-face {
     font-family: 'ITC Avant Garde';
     src: url('./fonts/ITC\ Avant\ Garde\ Gothic\ LT\ Bold.otf') format('opentype');
-    font-weight: 600;
+    font-weight: bold;
     font-style: normal;
 }
 
@@ -15,8 +15,6 @@
 
 /*=============== VARIABLES CSS ===============*/
 :root {
-    --header-height: 3.5rem;
-    
     /*========== Background/Text Color ==========*/
     --primary-color: #1D1D1B;
     --secondary-color: #F0F2F1;
@@ -26,13 +24,12 @@
     /*========== Font and Typography ==========*/
     --title-font: 'ITC Avant Garde', sans-serif;
     --body-font: 'Neue Montreal', sans-serif;
-    --biggest-font-size: 2rem;
-    --h1-font-size: 1.5rem;
-    --h2-font-size: 1.25rem;
-    --h3-font-size: 1rem;
-    --normal-font-size: .938rem;
-    --small-font-size: .813rem;
-    --smaller-font-size: .75rem;
+    --h1-font-size: 3em;
+    --biggest-font-size: 2.4rem;
+    --big-font-size: 1.8rem;
+    --medium-font-size: 1.4rem;
+    --normal-font-size: 1rem;
+    --smaller-font-size: .8rem;
 
     /*========== Font Weight ==========*/
     --font-medium: 500;
@@ -47,6 +44,7 @@
     --mb-1-5: 1.5rem;
     --mb-2: 2rem;
     --mb-2-5: 2.5rem;
+    --mb-4: 4rem;
 
     /*========== z index ==========*/
     --z-tooltip: 10;
@@ -83,19 +81,16 @@ button {
 .container {
     display: flex;
     flex-direction: column;
-    margin: auto;
+    margin: var(--mb-2) auto;
 }
 
-.title {
+.title, .second__title {
     text-align: center;
     text-transform: uppercase;
+    letter-spacing: -2.5px;
     font-family: var(--title-font);
-    letter-spacing: -2px;
-}
-
-.table {
-    border-collapse: collapse;
-    
+    font-size: var(--biggest-font-size);
+    color: var(--primary-color);
 }
 
 .thead__container {
@@ -103,6 +98,7 @@ button {
 }
 
 th {
+    padding: 10px;
     color: var(--secondary-color);
     text-transform: uppercase;
 }
@@ -112,12 +108,147 @@ tbody {
     background-color: var(--tertiary-color);
 }
 
+td {
+    padding: 5px 0;
+}
+
+.button {
+    background-color: var(--tertiary-color);
+    border: 1px solid var(--primary-color);
+    color: var(--primary-color);
+    font-family: var(--body-font);
+    border-radius: 10px;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+.button__container {
+    display: flex;
+    justify-content: center;
+    gap: 3px;
+    margin-bottom: var(--mb-4);
+
+}
+
+.hidden__container {
+    display: flex;
+    justify-content: space-between;
+    margin: auto;
+}
+
+.fixed {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
+
 @media screen and (max-width: 768px) {
     body {
         font-size: var(--smaller-font-size);
     }
 
     .container {
+        width: 99%;
+    }
+
+    .title {
+        font-size: var(--big-font-size);
+    }
+
+    .button {
+        font-size: var(--smaller-font-size);
+        padding: 10px 18px;
+    }
+
+    .second__title {
+        font-size: var(--medium-font-size);
+    }
+
+    .hidden__container {
+        flex-direction: column;
+        padding: 30px;
+        
+    }
+
+}
+
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+    body {
+        font-size: var(--normal-font-size);
+    }
+
+    .container {
+        width: 97%;
+    }
+
+    .button {
+        font-size: var(--smaller-font-size);
+        padding: 10px 30px;
+    }
+
+    .second__button {
+        padding: 5px 25px;
+        font-size: var(--normal-font-size);
+    }
+
+    .hidden__container {
+        flex-direction: column;
+        padding: 30px;
+    }
+
+    .second__title {
+        font-size: var(--big-font-size);
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    body {
+        font-size: var(--medium-font-size);
+    }
+
+    .container {
         width: 95%;
+    }
+
+    .button {
+        font-size: var(--normal-font-size);
+        padding: 15px 35px;
+    }
+
+    .hidden__container {
+        flex-direction: column;
+        padding: 30px;
+    }
+
+    .second__title {
+        font-size: var(--big-font-size);
+    }
+}
+
+@media screen and (min-width: 1567px) {
+    .container {
+        width: 80%;
+    }
+
+    .hidden__container {
+        flex-direction: row;
+        padding: 30px;
+        width: 80%;
+    }
+
+    .content {
+        font-size: var(--normal-font-size);
+    }
+
+    .title {
+        font-size: var(--h1-font-size);
+    }
+
+    .second__title {
+        font-size: var(--biggest-font-size);
+    }
+
+    .width {
+        width: 150px;
     }
 }
