Finished search filter and category, cleaned up some code.

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -89,6 +89,10 @@ header nav {
     align-items: center;
 }
 
+.hidden {
+    display: none;
+}
+
 .hamburger .icon {
     background-color: transparent;
     color: #D9D9D9;
