--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -92,18 +92,6 @@ header nav {
 .hidden {
     display: none;
 }
-
-.hamburger .icon {
-    background-color: transparent;
-    color: #D9D9D9;
-    height: 2.5rem;
-    width: 2.5rem;
-}
-
-body.menu-open {
-    overflow: hidden;
-}
-
 .hamburger {
     display: flex;
     align-items: center;
@@ -113,6 +101,45 @@ body.menu-open {
     height: 3rem;
     z-index: 3;
     transition: ease 0.5s;
+}
+.hamburger div{
+    width: 1.5rem;
+    height: 1.5rem;
+    position: relative;
+    margin:0.25rem;
+}
+.hamburger span{
+    background-color: #D9D9D9;
+    width: 100%;
+    height: 0.3rem;
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    transition: transform 0.6s, width 0.7s;
+}
+.hamburger .line-1{
+    transform: translate(-50%, -200%);
+}
+.hamburger .line-3{
+    transform: translate(-50%, 100%);
+}
+.open .line-1{
+    transform: translate(-50%, -50%) rotate(-45deg);
+}
+.open .line-2{
+    width: 0;
+}
+.open .line-3{
+    transform: translate(-50%, -50%) rotate(45deg);
+}
+.open span{
+    background-color: #1D1D1B;
+    transition: transform 0.6s, width 0.7s;
+}
+body.menu-open {
+    overflow: hidden;
 }
 
 .menu * {
@@ -191,6 +218,7 @@ body.menu-open {
     color: #F0F2F1;
     background-color: #1D1D1B;
     padding: 0.5rem 1rem;
+    margin-top: 0.5rem;
     border-radius: 12px;
     border-width: 0;
 }
@@ -641,16 +669,6 @@ footer * {
     .book_section {
         grid-template-columns: 21.25rem;
         gap: 1.875rem;
-    }
-
-    .book_card {
-        height: auto;
-        width: 21.25rem;
-    }
-
-    .book_card .book_img {
-        height: auto;
-        width: 21.25rem;
     }
 
     .book_card .book_img img {
