--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,22 +1,35 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
+@font-face {
+    font-family: 'ITC Avant Garde';
+    src: url('../public/fonts/ITC\ Avant\ Garde\ Gothic\ LT\ Bold.otf') format('opentype');
+    font-weight: bold;
+    font-style: normal;
+}
 
+@font-face {
+    font-family: 'Neue Montreal';
+    src: url('../public/fonts/NeueMontreal-Regular.otf') format('opentype');
+    font-weight: normal;
+    font-style: normal;
+}
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Inter', sans-serif;
+    font-family: 'Neue Montreal', sans-serif;
     color: #D9D9D9;
     box-sizing: border-box;
-    max-width: 100vw;
 }
 
 body {
     background: #222220;
-    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.page-content{
+    max-width: 70rem;
     display: grid;
-    justify-content: center;
     overflow-x: hidden;
 }
-
 ::-webkit-scrollbar {
     width: .4rem;
 }
@@ -51,15 +64,14 @@ header {
 header .background {
     position: absolute;
     top: 0;
-    ;
     z-index: -1;
     height: 27.5rem;
-    width: 100dvw;
+    width: 100%;
 }
 
 header video {
     object-fit: cover;
-    width: 100dvw;
+    width: 100%;
 }
 
 header .background::after {
@@ -67,7 +79,7 @@ header .background::after {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100dvw;
+    width: 100%;
     height: 100%;
     background: linear-gradient(rgba(0, 0, 0, 0.08), #222220 70%);
     z-index: 1;
@@ -235,6 +247,7 @@ header .header {
 }
 
 header .content h1 {
+    font-family: 'ITC Avant Garde', sans-serif;
     font-weight: bold;
     line-height: 95%;
     letter-spacing: -3px;
@@ -248,10 +261,9 @@ header .content p {
 
 main {
     display: grid;
-    justify-items: center;
-    text-align: center;
     position: relative;
     row-gap: 1.875rem;
+    width: inherit;
 }
 
 .search {
@@ -277,12 +289,14 @@ main {
     display: flex;
     position: relative;
     align-items: center;
-    width: 90dvw;
+    width: 100vw;
     max-width: 70rem;
     height: 2.5rem;
     overflow-x: auto;
     border: 1px solid #8F8B8B;
     border-width: 0 0 1px 0;
+    text-overflow: ellipsis;
+    text-wrap: nowrap;
 }
 
 .category-list::-webkit-scrollbar {
@@ -321,7 +335,7 @@ main {
 .book_section {
     display: grid;
     width: 100%;
-    max-width: 70rem;
+    justify-content: space-between;
 }
 
 .book_card .book_img img {
@@ -346,6 +360,10 @@ main {
     font-weight: bolder;
     text-transform: uppercase;
     font-size: 24px;
+    text-overflow: ellipsis;
+    text-wrap: nowrap;
+    overflow: hidden;
+    width: 100%;
 }
 
 .genre {
@@ -354,8 +372,10 @@ main {
     flex-direction: row;
     text-transform: uppercase;
     text-align: start;
-    text-wrap: none;
     font-size: 14px;
+    text-overflow: ellipsis;
+    text-wrap: nowrap;
+    overflow: hidden;
 }
 
 .borrow {
@@ -366,12 +386,9 @@ main {
 }
 
 footer {
-    width: 100vw;
+    width: 100%;
     justify-content: center;
     display: grid;
-    justify-content: center;
-    max-width: 70rem;
-    justify-self: center;
 }
 
 hr {
@@ -394,7 +411,7 @@ footer * {
 
 @media screen and (min-width: 1025px) {
     header .background::after {
-        background: linear-gradient(rgba(0, 0, 0, 0.1), #222220 80%);
+        background: linear-gradient(rgba(0, 0, 0, 0.1), #222220 95%);
     }
 
     .category-list {
@@ -422,20 +439,21 @@ footer * {
     }
 
     header .content h1 {
+        width: 35rem;
         font-size: 50px;
-        padding: 0 2rem;
-        margin-bottom: 2rem;
+        margin-bottom: 1rem;
     }
 
     header .content p {
+        width: 35rem;
+        padding: 0 2rem;
         font-size: 18px;
-        padding: 0 .5rem;
-        margin-bottom: 2rem;
+        margin-bottom: 3rem;
     }
 
     .search {
         width: 28.75rem;
-        margin-bottom: 4rem;
+        margin-bottom: 3rem;
     }
 
     .book_section {
@@ -460,11 +478,11 @@ footer * {
     .book_card img {
         object-fit: cover;
         width: 100%;
-        height: 100%;
+        height: 23rem;
     }
 
     footer {
-        grid-template-columns: repeat(4, 24%);
+        grid-template-columns: repeat(4, 25%);
         margin-top: 7.25rem;
     }
 
@@ -510,6 +528,9 @@ footer * {
 }
 
 @media screen and (max-width: 1024px) {
+    .page-content{
+        width: 90vw;
+    }
     header .background::after {
         background: linear-gradient(rgba(0, 0, 0, 0.08), #222220 90%);
     }
@@ -527,12 +548,12 @@ footer * {
     }
 
     header nav {
-        margin-bottom: 3.75rem;
+        margin-bottom: 4rem;
     }
 
     .search {
         width: 19.75rem;
-        margin-bottom: 4rem;
+        margin-bottom: 3rem;
     }
 
     header .background {
@@ -553,14 +574,14 @@ footer * {
 
     header .content h1 {
         font-size: 45px;
-        padding: 0 3rem;
-        margin-bottom: 2rem;
+        padding: 0 4rem;
+        margin-bottom: 1rem;
     }
 
     header .content p {
         font-size: 16px;
-        padding: 0 .5rem;
-        margin-bottom: 2rem;
+        padding: 0 6rem;
+        margin-bottom: 3rem;
     }
 
     .category-list ul li {
@@ -568,23 +589,22 @@ footer * {
     }
 
     .book_card .book_img img {
-        height: 100%;
         width: 100%;
+        height: 31.5rem;
     }
 
     .book_section {
-        grid-template-columns: repeat(2, 21.25rem);
-        justify-content: space-evenly;
+        grid-template-columns: repeat(2, 48%);
         row-gap: 2rem;
+        max-width: 90vw;
     }
 
     .book_card {
-        width: 21.25rem;
-        max-width: 21.25rem;
+        width: 100%;
     }
 
     footer {
-        grid-template-columns: repeat(2, 48%);
+        grid-template-columns: repeat(2, 50%);
         margin-top: 1.5rem;
     }
 
@@ -633,7 +653,7 @@ footer * {
 
 @media screen and (max-width: 767px) {
     header .background::after {
-        background: linear-gradient(rgba(0, 0, 0, 0.08), #222220 80%);
+        background: linear-gradient(rgba(0, 0, 0, 0.08), #222220 75%);
     }
 
     .category-list ul li a {
@@ -641,7 +661,7 @@ footer * {
     }
 
     .search {
-        width: 14.5rem;
+        width: 100%;
         margin-bottom: 0;
     }
 
@@ -649,16 +669,21 @@ footer * {
         font-size: 24px;
     }
 
+    .header nav{
+       margin-bottom: 2.25rem; 
+    }
     header .header {
-        padding: 1rem 1rem 2rem;
+        padding: 2rem 1.25rem 2.5rem;
     }
 
-    header .content h1 {
-        padding: 0 2rem;
+    header .content h1 { 
+        padding: 0 1.5rem;
+        margin-bottom: 1rem;
         font-size: 32px;
     }
 
     header .content p {
+        padding: 0 2rem;
         font-size: 12px;
     }
 
@@ -667,26 +692,21 @@ footer * {
     }
 
     .book_section {
-        grid-template-columns: 21.25rem;
-        gap: 1.875rem;
+        grid-template-columns: 100%;
+        width: inherit;
     }
 
     .book_card .book_img img {
-        height: auto;
-        width: 21.25rem;
+        height: 34rem;
+        width: 100%;
     }
 
     footer {
-        grid-template-columns: repeat(2, 47%);
+        grid-template-columns: repeat(2, 50%);
     }
 
     footer * {
         font-size: 12px;
-    }
-
-    footer .r1,
-    .r2 {
-        padding: 0 .25rem;
     }
 
     .menu {
