--- a/src/styles/borrowed_book_page.css
+++ b/src/styles/borrowed_book_page.css
@@ -8,6 +8,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    /* overflow-x: hidden; */
 }
 body {
     font-family: 'Neue Montreal', sans-serif;
@@ -15,7 +16,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    min-height: 100vw;
+    /* min-height: 100vw; */
 }
 main{
     display: flex;
@@ -36,21 +37,33 @@ h1{
 h1, .book_title{
     color: #1D1D1B;
     font-weight: bold;
-
+    margin-top: 30px;
 }
-.read, .return{
+.read {
     display: flex;
-    color: #8F8B8B;
+    color: #F0F2F1;
+    background-color: #1D1D1B;
+    padding: 10px 5px;
+    border-radius: .5em;
     text-transform: uppercase;
     width: 100%;
     border-style: none;
+    justify-content: space-between;
 }
-.read{
-    justify-content: flex-start;
+
+.read, .return{
+    justify-content: center;
+    cursor: pointer;
 }
-.return{
-    justify-content: flex-end;
+
+.return {
+    border: none;
+    padding-left: 25px;
+    font-weight: bold;
+    color: #1D1D1B;
+    text-transform: uppercase;
 }
+
 .book_section {
     display: grid;
     width: 100%;
@@ -61,7 +74,9 @@ h1, .book_title{
     margin-bottom: 1rem;
 }
 .book_title{
-    margin-bottom: 0.5rem;
+    margin-bottom: 0.8rem;
+    text-transform: uppercase;
+    margin-top: 0.3rem;
     grid-column: 1 / span 2;
     text-overflow: ellipsis;
     text-wrap: nowrap;
@@ -71,7 +86,8 @@ h1, .book_title{
 .book_img img {
     object-fit: cover;
     width: 100%;
-    height: auto;
+    /* height: 100%; */
+    border-radius: .5em;
 }
 .book_card .book_info{
     display: grid;
@@ -87,7 +103,11 @@ header nav{
     justify-content: space-between;
     align-items: center;
     background-color: #F0F2F1;
-    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 4px 2px -2px gray;
+}
+
+.icon {
+    cursor: pointer;
 }
 .hamburger {
     display: flex;
@@ -152,7 +172,8 @@ body.menu-open {
     background-color: #F0F2F1;
     z-index: 1;
     right: -100%;
-    transition: ease-in-out 0.4s;
+    transition: ease-in-out 0.6s;
+    border-left: 1px solid #1D1D1B;
 }
 
 .menu .container {
@@ -169,6 +190,11 @@ body.menu-open {
     height: fit-content;
     display: grid;
     justify-items: start;
+}
+
+.title a {
+    text-decoration: none;
+    color: #1D1D1B;
 }
 
 .menu ul {
@@ -220,13 +246,16 @@ body.menu-open {
 
 .open .menu {
     right: 0;
-    transition: ease-in-out 0.5s;
+    transition: ease-in-out 0.35s;
 }
 footer {
-    margin-top: 1.5rem;
     width: 100%;
     justify-content: center;
     display: grid;
+    position: inherit;
+    bottom: 0;
+    left: 0;
+    margin: auto;
 }
 
 hr {
@@ -275,7 +304,7 @@ footer * {
     }
 
     .book_img img{
-        height: 14.5rem;
+        height: 300px;
     }
 
     .book_template, .book_card{
@@ -283,7 +312,7 @@ footer * {
     }
 
     header nav{
-        padding: 2rem 5rem;
+        padding: 1.3rem 5rem;
     }
 
     .menu {
@@ -308,7 +337,7 @@ footer * {
 
     footer {
         grid-template-columns: repeat(4, 25%);
-        margin: 5rem auto 2rem;
+        /* margin: 5rem auto 2rem; */
     }
 
     footer * {
@@ -349,7 +378,7 @@ footer * {
         width:100%;
     }
     .book_img img{
-        height: 13.875rem;
+        height: 300px;
     }
 
     header nav{
@@ -358,7 +387,7 @@ footer * {
 
     footer {
         grid-template-columns: repeat(2, 50%);
-        margin-top: 1.5rem;
+        /* margin-top: 1.5rem; */
     }
 
     footer * {
@@ -415,6 +444,7 @@ footer * {
     }
     .book_img img{
         width: 100%;
+        height: 300px;
     }
     header nav{
         padding: 1.25rem 2rem;
@@ -444,12 +474,15 @@ footer * {
         height: 1.5rem;
     }
 
+    footer {
+        width: 100%;
+    }
+
     footer * {
         font-size: 12px;
     }
 
-    footer .r1,
-    .r2 {
+    footer .r1, .r2 {
         padding: 0 .25rem;
     }
 
