--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -26,7 +26,9 @@ body {
     align-items: center;
 }
 .page-content{
+    box-sizing: content-box;
     max-width: 70rem;
+    padding: 1rem;
     display: grid;
     overflow-x: hidden;
 }
@@ -299,7 +301,6 @@ main {
     overflow-x: auto;
     border: 1px solid #8F8B8B;
     border-width: 0 0 1px 0;
-    text-overflow: ellipsis;
     text-wrap: nowrap;
 }
 
@@ -345,7 +346,6 @@ main {
 .book_card .book_img img {
     object-fit: cover;
     border-radius: 15px;
-    cursor: crosshair;
 }
 
 .book_card .book_info {
@@ -418,6 +418,15 @@ footer * {
     text-transform: uppercase;
     display: flex;
     flex-direction: column;
+}
+
+.book_card:hover > .book_info > * {
+    overflow:visible;
+    text-wrap: wrap;
+}
+.book_card:hover {
+    scale:1.025;
+    transition: ease-in-out 0.3s;   
 }
 
 @media screen and (min-width: 1025px) {
