--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -257,7 +257,6 @@ header .content h1 {
     line-height: 95%;
     letter-spacing: -1px;
     color: #f0F2F1;
-
 }
 
 header .content p {
@@ -420,14 +419,30 @@ footer * {
     flex-direction: column;
 }
 
-.book_card:hover > .book_info > * {
+.book_img {
+    overflow: hidden;
+    border-radius: .75em;
+    cursor: crosshair;
+}
+
+.book_picture {
+    transition: 0.4s;
+}
+
+.book_picture:hover {
+    transform: scale(1.05);
+}
+
+
+
+/* .book_card:hover > .book_info > * {
     overflow:visible;
     text-wrap: wrap;
 }
 .book_card:hover {
     scale:1.025;
     transition: ease-in-out 0.3s;   
-}
+} */
 
 @media screen and (min-width: 1025px) {
     header .background::after {
@@ -459,13 +474,14 @@ footer * {
     }
 
     header .content h1 {
-        width: 35rem;
-        font-size: 50px;
+        width: 70%;
+        font-size: 60px;
         margin-bottom: 1rem;
+        margin-top: 2rem;
     }
 
     header .content p {
-        width: 60%;
+        width: 55%;
         padding: 0 2rem;
         font-size: 18px;
         margin-bottom: 3rem;
@@ -750,11 +766,29 @@ footer * {
 
 @media screen and (min-width: 1567px) {
     header .content p {
-        width: 40%;
+        width: 55%;
     }
 
     header .content h1 { 
         width: 100%;
         margin-top: 50px;
     }
+
+    .hamburger .icon {
+        width: 2em;
+    }
 }
+
+@media screen and (min-width: 1700px) {
+    header .content p {
+        width: 50%;
+    }
+
+    header .content h1 { 
+        width: 100%;
+        margin-top: 70px;
+        font-size: 3.6em;
+    }
+}
+
+
