fixed position of formContainer to be at the bottom

--- a/src/styles/admin_user.css
+++ b/src/styles/admin_user.css
@@ -321,6 +321,9 @@ body.menu-open {
 
 #formsContainer {
     display: none;
+    bottom: 0;
+    position: absolute;
+    width: 100%;
 }
 
 .input__value {
