--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -19,12 +19,12 @@
 }
 body{
     background: #F0F2F1;
-    height: 100vh;
+    /* height: 100vh; */
     overflow: hidden;
 }
 .content{
     display: flex;
-    height: 100%;
+    /* height: 12; */
     justify-content: center;
     align-items: center;
 }
@@ -311,6 +311,8 @@ body.menu-open {
 
     .content{
         align-items: flex-start;
+        margin: 50px auto;
+        width: 85%;
     }
 
     nav .title{
@@ -432,6 +434,10 @@ body.menu-open {
         flex-direction: row;
         overflow: hidden;
     }
+    .content {
+        margin-top: 20px;
+        margin-bottom: 100px;
+    }
     .content .container{ 
         height: 100%;
         width: 42rem;
@@ -456,8 +462,7 @@ body.menu-open {
     .content .container .toggle-container{
         animation: slideU 0.7s forwards;
     }
-    .content .container.active .logInForm{
-    }
+
     .content .container .form-card{
         grid-template-columns: 18rem 18rem;
         column-gap: 3rem;
@@ -524,6 +529,7 @@ body.menu-open {
    body{
         flex-direction: column;
    }
+
    .content .container{
         width: 77rem;
         height: 29.5rem;
@@ -562,5 +568,7 @@ body.menu-open {
     }
 }
 @media screen and (min-width: 1567px) {
-
+    .content {
+        height:85vh;
+    }
 }
